tests/parser/bad/cmodule-procedure-id-lparen-rparen-with.scilla
scilla_version 0

contract Test
()

(* field is not a statement *)
procedure something ()
  field arbitrary : Bool = True
end
